--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "build":"tsc"
+    "build": "tsc",
+    "db:push": "drizzle-kit push"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/pg": "^8.15.6",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
